Fixed issue where session was returning undefined when signing in new user

--- a/app/views/new_user_mailer/signup_confirmation.text.erb
+++ b/app/views/new_user_mailer/signup_confirmation.text.erb
@@ -1,3 +1,7 @@
 NewUser#signup_confirmation
 
 <%= @greeting %>, find me in app/views/new_user_mailer/signup_confirmation.text.erb
+
+Thank you for joining us at Cleverbreak.
+
+Save Well!!!
