--- a/app/views/new_user_mailer/signup_confirmation.text.erb
+++ b/app/views/new_user_mailer/signup_confirmation.text.erb
@@ -1,7 +1,10 @@
-NewUser#signup_confirmation
 
-<%= @greeting %>, find me in app/views/new_user_mailer/signup_confirmation.text.erb
-
-Thank you for joining us at Cleverbreak.
-
-Save Well!!!
+Welcome to example.com, <%= @user.name %>
+===============================================
+ 
+You have successfully signed up to example.com,
+your username is: <%= @user.email %>.
+ 
+To login to the site, just follow this link:
+ 
+Thanks for joining and have a great day!
