Added ability for delete button to disappear if current user is not the author of comment

--- a/app/assets/stylesheets/comment.css
+++ b/app/assets/stylesheets/comment.css
@@ -1,6 +1,12 @@
 
 
-.comments-index-container{
+.comments-index-container {
   display: block;
   /* background-color: red; */
+}
+
+.not-comment-author {
+  display: none;
+
+
 }
