--- a/app/assets/stylesheets/activity.css
+++ b/app/assets/stylesheets/activity.css
@@ -1,16 +1,26 @@
+.recent-activity-main-container {
+  position: relative;
+  
+}
+
+
+
 
 .activity-item {
   min-height: 40px;
   height: 59px;
-  /* padding:  */
+  font-size: 17px;
   width: 100%;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  
 
   background-color: transparent;
 
 }
 
 .activity-payee {
-  color: green;
+  color: #5BC5A7;
 }
 
 .activity-payor {
