--- a/app/assets/stylesheets/bills.css
+++ b/app/assets/stylesheets/bills.css
@@ -47,7 +47,7 @@
 }
 
 .bill-lent {
-  color: green;
+  color: #5BC5A7;
 }
 
 .bill-edit-expense-btn {
@@ -55,8 +55,17 @@
   color: #fff;
   text-shadow: 0 -1px 0 #c83400;
   padding: 2px 6px;
-  font-size: 11px;
+  font-size: 12px;
   line-height: 14px;
+  margin-top: 5px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 4px;
 }
 
 /* .recent-activity-main-container {
@@ -81,6 +90,11 @@
   display: none;
 }
 
+.bill-show-top {
+  padding-bottom: 5px;
+  border-bottom: 1px solid #ddd;
+}
+
 .bill-show-title {
   font-size: 16px;
 }
@@ -95,6 +109,16 @@
   
 }
 
+.bill-show-lending {
+  position: absolute;
+  left: 260px;
+}
+
+.bill-show-lending div {
+  position: absolute;
+  left: 15px;
+}
+
 .bill-show-dropdown-body {
-  padding-left: 6px;
+  padding-left: 10px;
 }
