--- a/app/assets/stylesheets/comment.css
+++ b/app/assets/stylesheets/comment.css
@@ -10,3 +10,61 @@
 
 
 }
+
+.comment-show-box {
+  margin-top: 1px;
+  background-color: white;
+  border: 1px solid #ccc;
+  width: 30%;
+  border-radius: 5%;
+  position: relative;
+  padding-left: 5px;
+  margin-bottom: 1px;
+  height: 100%;
+
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  font-size: 1rem;
+
+}
+
+.comment-show-title {
+  margin-top: 2px;
+  font-weight: bold;
+  font-size: 12px;
+  margin-bottom: 3px;
+
+}
+
+.comment-show-body {
+  font-size: 14px;
+
+}
+
+
+
+
+.is-comment-author {
+  position: absolute;
+  color: red;
+  background-color: transparent;
+  border: none;
+  right: 0;
+  top: 0;
+
+}
+
+.comment-submit-btn {
+  background-color: #ff652f;
+  text-shadow: 0 -1px 0 #c83400;
+  color: white;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 4px;
+  margin-bottom: 8px;
+}
