--- a/app/assets/stylesheets/friend.css
+++ b/app/assets/stylesheets/friend.css
@@ -1,5 +1,15 @@
 .friend-main-container {
   width: 100px;
+  
+
+
+
+
+}
+
+.friend-main-container ul {
+  margin-bottom: 5px;
+  
 
 
 
@@ -13,6 +23,7 @@
   color: #ccc;
   font-size: 12px;
   min-width: 100%;
+  
 
 }
 
@@ -21,6 +32,7 @@
   background-color: transparent;
   border: none;
   outline: none;
+
 }
 
 .friend-title button:hover{
@@ -29,7 +41,9 @@
 }
 
 .friend-name {
- 
+  /* color: #999999; */
+  font-size: 14px;
+
   margin-top: 1px;
   margin-bottom: 2px;
 }
