Cleaned buttons throughout project

--- a/app/assets/stylesheets/bills.css
+++ b/app/assets/stylesheets/bills.css
@@ -74,9 +74,9 @@
 /* 
 .bill-list-container {
   color: red;
-}
+} */
 
-.all-bill-show-container {
+/* .all-bill-show-container {
   background-color: red;
 } */
 
