--- a/app/assets/stylesheets/bill_modal.css
+++ b/app/assets/stylesheets/bill_modal.css
@@ -1,6 +1,6 @@
 .bill-modal-container {
   background-color: white;
-  width: 30vw;
+  width: 20vw;
 
   border-radius: 1%;
   border: 1px solid #999;
@@ -17,4 +17,54 @@
   text-shadow: 0 -1px 0 #318a71;
   font-size: 18px;
   font-weight: bold;
+  padding: 5px;
+}
+
+.bill-modal-body {
+  padding: 4px;
+  font-size: 16px;
+  line-height: 2px;
+
+
+}
+
+.bill-modal-cancel-btn {
+  background: #ff652f;
+  color: #fff;
+  text-shadow: 0 -1px 0 #c83400;
+  padding: 2px 6px;
+  font-size: 12px;
+  line-height: 14px;
+  margin-top: 5px;
+  margin-right: 2px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 4px;
+}
+
+.bill-modal-submit-btn {
+  background-color: #5bc5a7;
+  color: white;
+  text-shadow: 0 -1px 0 #318970;
+  
+  padding: 2px 6px;
+  font-size: 12px;
+  line-height: 14px;
+  margin-top: 5px;
+  margin-right: 2px;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 4px;
+
+
 }
