--- a/app/assets/stylesheets/friend.css
+++ b/app/assets/stylesheets/friend.css
@@ -1,18 +1,9 @@
 .friend-main-container {
   width: 100px;
-  
-
-
-
-
 }
 
 .friend-main-container ul {
   margin-bottom: 5px;
-  
-
-
-
 
 }
 
@@ -46,5 +37,49 @@
 
   margin-top: 1px;
   margin-bottom: 2px;
+}
+
+.friend-invite-box-title {
+  background: #5bc5a7;
+  color: #fff;
+  border: 1px solid #39a385;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 3px;
+  text-shadow: 0 -1px 0 #3eaf8f;
+  width: 84%;
+}
+
+.friend-invite-box-container {
+
+  border: 1px solid #ccc;
+  border-top: none;
+  margin-right: 22px;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  padding-left: 2px;
+
+}
+
+.friend-find-btn {
+  margin-top: 2px;
+
+  background-color: #5bc5a7;
+  color: white;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+  text-shadow: 0 -1px 0 #318970;
+
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding: 3px 8px 3px 8px;
+ 
+
+
 }
 
