--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -13,7 +13,8 @@ text-emphasis: bold;
 position: absolute;
 width: 23%;
 height: auto;
-margin: 27px 13%;
+margin-left: 13%;
+/* margin: 15px 13%; */
 font-size: 20px;
 }
 
@@ -449,7 +450,7 @@ vertical-align: top;
 display:inline-block;
 border-top: 1px solid lightblue;
 border-bottom: 1px solid lightblue;
-margin-top: 4px;
+/* margin-top: 4px; */
 padding-top: 5px;
 padding-bottom: 5px;
 }
@@ -464,6 +465,11 @@ margin-right: 50px;
 color: #1cc29f;
 text-decoration: none;
 }
+
+.core-pro-features li:nth-child(2) a{
+  color: #8656cd;
+  text-decoration: none;
+  }
 
 
 
