Added new way of displaying images on react. Branch to test functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,18 @@
         "id": <%= current_user.id %>,
         "email": "<%= current_user.email %>"
       }
+
+  
     </script>
   <% end %>
- 
+
+  <script>
+    window.backgroundImage = '<%= asset_url('login-main-logo')%>'
+    console.log(window.backgroundImage)
+
+  </script>
+
+
 
   </head>
 
