--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -92,26 +92,12 @@
   display: flex;
   flex-direction: column;
   width: 40%;
+  overflow: hidden;
   
 
 }
 
-.top-title {
-  text-emphasis: bold;
-  font-size: 40px;
-  width: 73%;
-  /* display: inline-block; */
-  height: auto;
-}
 
-.top-text {
-text-emphasis: bold;
-
-width: 50%;
-height: auto;
-/* margin: 15px 13%; */
-font-size: 20px;
-}
 
 
 
@@ -141,35 +127,77 @@ margin-top: 1px;
 }
 
 
-
-
-
-
 .top-title {
-font-size: 40px;
-color: #373b3f;
-font-family: 'Montserrat', sans-serif;
-font-weight: 600;
-margin-bottom: 15px; 
+  font-size: 40px;
+  color: #373b3f;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  margin-bottom: 15px; 
+  text-emphasis: bold;
+  width: 73%;
+  height: auto;
 }
 
+.top-text {
+  text-emphasis: bold;
+  width: 50%;
+  height: auto;
+  /* margin: 15px 13%; */
+  font-size: 20px;
+  margin-bottom: 10px;
+}
 
 .main-logo-front-page {
   margin-top: 2%;
   height: 500px;
   width: 500px;
+
   background-image: url('./images/login-main-logo.png');
   background-size: cover;
   mix-blend-mode: multiply;
+}
 
+@media screen and (max-width: 900px) {
+  .main-logo-front-page {
+    height: 400px;
+    width: 400px;
+    margin-top: 10%;
+  }
+
+  .top-title {
+    font-size: 30px;
+  }
+
+  .top-text {
+    font-size: 15px;
+  }
 
 }
 
+@media screen and (max-width: 700px) {
+  .main-logo-front-page {
+    height: 300px;
+    width: 300px;
+    margin-top: 10%;
+    
+  }
+
+  .top-title {
+    font-size: 25px;
+  }
+
+  .top-text {
+    font-size: 10px;
+  }
+}
+
+
+
 
 .greeting-bottom-list-container {
-height: 100%;
-display: relative;
-width: 100%;
+  height: 100%;
+  display: relative;
+  width: 100%;
 }
 
 
