--- a/app/assets/stylesheets/greeting_form.css
+++ b/app/assets/stylesheets/greeting_form.css
@@ -14,6 +14,7 @@
   order: 1;
   
   margin-top: 20px;
+  padding-bottom: 10px;
     
     
 }
@@ -171,8 +172,8 @@ margin-top: 1px;
   .top-text {
     font-size: 15px;
   }
-
 }
+
 
 @media screen and (max-width: 700px) {
   .main-logo-front-page {
@@ -183,11 +184,13 @@ margin-top: 1px;
   }
 
   .top-title {
-    font-size: 25px;
+    font-size: 23px;
+    width: 80%;
   }
 
   .top-text {
-    font-size: 10px;
+    font-size: 12px;
+    width: 80%;
   }
 }
 
