Updated image preview

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>Cleverbreak</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="image" property="og:image" content="../assets/stylesheets/images/cleverbreak-header-image-linkedin.png">
+
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
