--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -1,10 +1,11 @@
+@import 'global/partials';
+
+
 .nav-wrapper {
-  background-color: #5bc5a7;
-  /* background-color: #005792; */
+  background-color: $mainThemeBlueColor;
  
   box-shadow: 0 0 3px rgba(0,0,0,0.5);
-  height: 34px;
-  
+  height: 34px;  
 }
 
 .nav-container {
