Updated delete button to display pointer on hover

--- a/app/assets/stylesheets/friend.scss
+++ b/app/assets/stylesheets/friend.scss
@@ -49,6 +49,10 @@
   background-color: #E8E8E8;
 }
 
+.delete-friend-btn:hover {
+  cursor: pointer;
+}
+
 .friend-outer-container p {
   background: $mainThemePurpleColor;
   color: #fff;
