Updated Dashboard expense button with new color:

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -77,8 +77,8 @@
 .expense-btn {
 
   margin-top: 10px;
-  background-color: #ff652f;
-  text-shadow: 0 -1px 0 #c83400;
+  background-color: $mainThemePurpleColor;
+  text-shadow: 0 -1px 0 $secondaryPurpleColor;
   color: white;
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   height: 40px;
