--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -9,10 +9,14 @@
 $oldStyleLightGreen: #5bc5a7;
 $oldStyleDarkerGreen: #318970;
 
+$oldOrangeColor: #ff652f;
+$oldDeepOrangeColor: #c83400;
+
 
 
 // New Styling
   $mainThemeBlueColor: #005792;
+  
   $mainThemePurpleColor: #795cfd;
   $secondaryPurpleColor: #4c00a4;
 
