--- a/app/assets/stylesheets/bill_modal.scss
+++ b/app/assets/stylesheets/bill_modal.scss
@@ -5,6 +5,11 @@
   border-radius: 1%;
   border: 1px solid #999;
   box-shadow: 0px 2px 8px rgba(0,0,0,0.3);
+
+
+  // label {
+  //   padding-left: 3px;
+  // }
   
 }
 
