Updated righthand personal section to new purple site color. Updated lefthand side Friend title to purple

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -157,7 +157,8 @@
 
 .dashboard-about-me-list li a:hover {
   text-decoration: none;
-  color: #318970;
+  // color: #318970;
+  color: $mainThemePurpleColor;
 
 
 
