--- a/app/assets/stylesheets/friend.scss
+++ b/app/assets/stylesheets/friend.scss
@@ -1,13 +1,16 @@
 @import './global/partials';
 
 .friend-title {
-  background-color: #f6f6f6;
-  border: 1px #eee solid;
+  // background-color: #f6f6f6;
+  background-color: $mainThemePurpleColor;
+  border: 1px $secondaryPurpleColor solid;
+  color: #fff;
+  font-weight: bold;
   /* border-top: 1px #eee solid;
   border-bottom: 1px #eee solid;
   border-right: 1px #eee solid;; */
   /* color: #ccc; */
-  color: gray;
+  text-shadow: 0 -1px 0 $mainThemePurpleColor;
   font-size: 14px;
   text-emphasis: bold;
   padding-top: 3px;
@@ -66,7 +69,6 @@
   padding-bottom: 5px;
   padding-left: 2px;
   padding-right: 4px;
-
 }
 
 .friend-invite-input {
