--- a/app/assets/stylesheets/comment.scss
+++ b/app/assets/stylesheets/comment.scss
@@ -1,4 +1,4 @@
-
+@import './global/partials';
 
 .comments-index-container {
   display: block;
@@ -16,15 +16,14 @@
   background-color: white;
   border: 1px solid #ccc;
   width: 30%;
-  border-radius: 5%;
   position: relative;
-  padding-left: 5px;
+  padding-left: 3px;
   margin-bottom: 1px;
   height: 100%;
-
-  overflow-wrap: break-word;
   word-wrap: break-word;
   font-size: 1rem;
+
+  padding-bottom: 4px;
 
 }
 
@@ -55,8 +54,11 @@
 }
 
 .comment-submit-btn {
-  background-color: #ff652f;
-  text-shadow: 0 -1px 0 #c83400;
+
+
+  background: $mainThemeBlueColor;
+  text-shadow: 0 -1px 0 $mainThemeBlueColor;
+
   color: white;
   border-width: 1px;
   border-radius: 4px;
