Aligns text in Bill lent/lending section without use of position absolute

--- a/app/assets/stylesheets/bills.scss
+++ b/app/assets/stylesheets/bills.scss
@@ -82,9 +82,9 @@
   color: red;
 } */
 
-/* .all-bill-show-container {
-  background-color: red;
-} */
+// .all-bill-show-container {
+//   background-color: red;
+// }
 
 .bill-show-toggle-on {
   
@@ -117,13 +117,9 @@
 
 .bill-show-lending {
   position: absolute;
-  left: 260px;
+  left: 15vw;
 }
 
-.bill-show-lending div {
-  position: absolute;
-  left: 15px;
-}
 
 .bill-show-dropdown-body {
   padding-left: 10px;
