--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -20,6 +20,8 @@ $oldDeepOrangeColor: #c83400;
   $mainThemePurpleColor: #795cfd;
   $secondaryPurpleColor: #4c00a4;
 
+  $mainRedColor: #c83400;
+
   $navBarColor: linear-gradient(0.25turn,  #005792, 95%, lightblue);
 
 
