--- a/app/assets/stylesheets/bill_modal.scss
+++ b/app/assets/stylesheets/bill_modal.scss
@@ -1,3 +1,6 @@
+@import './global/partials';
+
+
 .bill-modal-container {
   background-color: white;
   width: 20vw;
@@ -5,18 +8,19 @@
   border-radius: 1%;
   border: 1px solid #999;
   box-shadow: 0px 2px 8px rgba(0,0,0,0.3);
+  padding-bottom: 3px;
   
 }
-
-
 
 .bill-modal-title {
   border-top-left-radius: 1%;
   border-top-right-radius: 1%;
-  background-color: #5cc5a7;
+  background-color: $mainThemeBlueColor;
   color: #fff;
-  border-bottom: 1px solid #36977b;
-  text-shadow: 0 -1px 0 #318a71;
+  // border-bottom: 1px solid #36977b;
+  // text-shadow: 0 -1px 0 #318a71;
+  border-bottom: 1px solid $mainThemeBlueColor;
+  text-shadow: 0 -1px 0 $mainThemeBlueColor;
   font-size: 18px;
   font-weight: bold;
   padding: 5px;
@@ -31,9 +35,10 @@
 }
 
 .bill-modal-cancel-btn {
-  background: #ff652f;
-  color: #fff;
-  text-shadow: 0 -1px 0 #c83400;
+  // background: #ff652f;
+  // color: #fff;
+  // text-shadow: 0 -1px 0 #c83400;
+  @include redBtn;
   padding: 2px 6px;
   font-size: 12px;
   line-height: 14px;
@@ -50,9 +55,10 @@
 }
 
 .bill-modal-submit-btn {
-  background-color: #5bc5a7;
-  color: white;
-  text-shadow: 0 -1px 0 #318970;
+  @include blueBtn;
+  // background-color: #5bc5a7;
+  // color: white;
+  // text-shadow: 0 -1px 0 #318970;
   
   padding: 2px 6px;
   font-size: 12px;
@@ -67,6 +73,4 @@
   border-bottom-color: rgba(0, 0, 0, 0.25);
   border-left-color: rgba(0, 0, 0, 0.1);
   padding: 4px;
-
-
 }
