--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -16,7 +16,7 @@
 }
 
 .splitwise-logo{
-  background-image: url('./images/logo-green-back.png');
+  // background-image: url('./images/logo-green-back.png');
   background-size: contain;
  
   height: 28px;
@@ -24,6 +24,17 @@
 }
 
 .nav-btn {
+  @include purpleBtn;
+  border-width: 1px;
+  border-radius: 4px;
+  border-color: 1px;
+  border-top-color: rgba(0, 0, 0, 0.1);
+  border-right-color: rgba(0, 0, 0, 0.1);
+  border-bottom-color: rgba(0, 0, 0, 0.25);
+  border-left-color: rgba(0, 0, 0, 0.1);
+  padding-bottom: 1px;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
   /* background-color: #c45;
   text-shadow: 0 -1px 0 #c45;
   cursor: pointer;
@@ -37,11 +48,11 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 10px; */
-  margin-top: 1px;
-  background-color: transparent;
-  border: none;
-  color: white;
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  // margin-top: 1px;
+  // background-color: transparent;
+  // border: none;
+  // color: white;
+  // font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
 
