Used absolute with vw and px values to center text on bill lent/lending

--- a/app/assets/stylesheets/bills.scss
+++ b/app/assets/stylesheets/bills.scss
@@ -120,6 +120,11 @@
   left: 15vw;
 }
 
+.bill-show-lending div {
+  position: absolute;
+  left: 15px;
+}
+
 
 .bill-show-dropdown-body {
   padding-left: 10px;
